Ajout de la propriété height: auto; aux sections pour améliorer la présentation.

--- a/TP8/style.css
+++ b/TP8/style.css
@@ -35,6 +35,7 @@ body {
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(186, 201, 204, 0.5);
+    height: 600px;
 
 }
 
