--- a/Mission5/cv.css
+++ b/Mission5/cv.css
@@ -3,7 +3,7 @@
    ==================== */
 body {
     font-size: 16px;
-    font-family: georgia, arial, sans-serif;
+    font-family: 'Courier New', Courier, monospace ;
 }
 
 .CV {
