--- a/TP12/tp12.css
+++ b/TP12/tp12.css
@@ -12,6 +12,14 @@ h1 {
     font-size: 2em;
 }
 
+iframe {
+    width: 80%;
+    height: 300px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
 button {
     cursor: pointer;
     background-color: #3498db;
