--- a/TP14/style.css
+++ b/TP14/style.css
@@ -9,6 +9,7 @@ body {
     margin: 0 auto;
     background-color: white;
     padding: 40px;
+    box-shadow: 0 0 30px 10px rgba(0, 0, 0, 0.25);
 }
 
 .entete {
